# spider1

./: run_ml_predictions.py  setup-infinite-memory.md
backend/: config.py  logger.py  main.py  requirements.txt
backend/services/: agent_service.py  elevenlabs.py  kendra.py  s3.py  (+4 more)
frontend/: entry.py  vad.py
ml_models/: medicine_restocking_predictor.py
spider1/: INFINITE_MEMORY_INTEGRATION.md  ML_SYSTEM_README.md  NOTIFICATION_SYSTEM.md  package-lock.json  pyproject.toml  test_ml_system.py
spider1/backend/: clients.py  medicine_recommendation_system.py
spider1/backend/services/: alerts_service.py  bedrock.py  neptune.py  speaker_identification.py
spider1/backend/tools/: google_calendar_tool.py
spider1/ml_models/: medicine_restocking_predictor.py
spider1/src/: App.tsx
spider1/src/components/infinite-memory/: InfiniteMemoryDashboard.tsx  InfiniteMemoryDemo.tsx
spider1/src/components/inventory/: InventoryDashboard.tsx  InventoryNav.tsx
spider1/src/components/layout/: Header.tsx
spider1/src/components/marketplace/: MarketplaceDashboard.tsx  SupplierDashboard.tsx
spider1/src/components/ml-predictions/: MLPredictionsDashboard.tsx
spider1/src/components/ui/: notification-panel.css  notification-panel.tsx  notification-test.tsx  profile-menu.tsx  role-switcher.tsx  wallet-debug.tsx
spider1/src/contexts/: InfiniteMemoryContext.tsx  InventoryContext.tsx  NotificationContext.tsx
spider1/src/pages/: Index.tsx  Profile.tsx  Settings.tsx
spider1/src/services/: infiniteMemoryApi.ts  notificationService.ts
spider_codezilla/: .gitignore
src/: App.tsx
(+15 files in other folders)
