[project]
name = "infinite-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "amazon-transcribe>=0.6.4",
    "boto3>=1.38.41",
    "elevenlabs>=2.4.0",
    "fastapi>=0.115.13",
    "gremlinpython>=3.7.3",
    "huggingface-hub>=0.33.0",
    "ipython>=8.18.1",
    "jinja2>=3.1.6",
    "langchain>=0.3.26",
    "numpy>=1.26.4",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pyannote-audio>=3.3.2",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "speechbrain>=1.0.3",
    "streamlit>=1.46.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "uvicorn[standard]>=0.34.3",
    "watchdog>=6.0.0",
    "websockets>=15.0.1",
]
